--- a/template/node16/function/package.json
+++ b/template/node16/function/package.json
@@ -4,9 +4,9 @@
   "description": "OpenFaaS Function",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "mocha"
   },
   "keywords": [],
-  "author": "OpenFaaS Ltd",
+  "author": "Martin Chapman",
   "license": "MIT"
 }
