--- a/template/node16/package.json
+++ b/template/node16/package.json
@@ -11,11 +11,6 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.16.2",
-    "winston": "^3.3.3"
-  },
-  "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^9.1.3"
+    "express": "^4.16.2"
   }
 }
